--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,6 +1,6 @@
 project:
   type: website
-
+  output-dir: docs
 
 website:
   title: "PaleoAnth SiteMaps"
@@ -9,6 +9,7 @@ website:
     left:
       - href: index.qmd
         text: Home
+        - Splash.qmd
 format:
   html:
     theme: Sandstone
