--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,5 +16,8 @@ format:
     theme: Sandstone
     css: styles.css
     toc: true
+    code-fold: true
+    code-summary: "Show the code"
+    
     
     
